# ai_dev_graph_project

./: .gitignore  CHANGELOG.md  ENHANCED_MCP_SUMMARY.md  GIT_SETUP.md  IMPLEMENTATION_SUMMARY.md  LOGS_AUDIT_REPORT.md  PROJECT_STATUS.md  README.md  RELEASE_v0.3.0.md  RESUMEN_IMPLEMENTACION.md  TODO.md  WATERFALL_SUMMARY.md  add_clean_arch_solid.py  dev_context.json  install_act.sh  migrate_to_neo4j.py  pyproject.toml  pytest.ini  quickstart.sh  relate_team_to_concepts.py
.github/workflows/: ci.yml  mcp-ci.yml
data/: waterfall_state.json
docs/: ADVANCED_MCP.md  DATABASE.md  ENHANCED_MCP.md  USAGE.md  WATERFALL_TRACKING.md  index.md
frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/playwright-report/: index.html
frontend/src/: main.js  style.css
frontend/tests/e2e/: explorer.spec.js
frontend/tests/unit/: theme.test.js
graphs/: v0_initial.json
src/ai_dev_graph/: __init__.py  advanced_mcp.py  cli.py  cli_graph.py  init_meta_graph.py  mcp_server.py  waterfall_tracker.py
src/ai_dev_graph/api/: __init__.py  main.py
src/ai_dev_graph/application/: manager.py
src/ai_dev_graph/core/: __init__.py  config.py  db_utils.py  graph.py  persistence.py
src/ai_dev_graph/domain/: graph.py  models.py  repositories.py
src/ai_dev_graph/infrastructure/: hybrid_repo.py  neo4j_repo.py  networkx_repo.py  persistence_factory.py
tests/: conftest.py  test_advanced_mcp.py  test_cli.py  test_coherence.py  test_core.py  test_e2e.py  test_infrastructure.py  test_logs_audit.py  test_logs_audit_simple.py
(+2 files in other folders)
