[project]
name = "ai_dev_graph"
version = "0.3.0"
description = "Knowledge graph for AI agents context"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "neo4j>=6.1.0",
    "networkx>=3.2.1",
    "pydantic>=2.6.0",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "commitizen>=3.15.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "playwright>=1.40.0",
    "ruff>=0.1.0",
    "requests>=2.31.0",
    "pytest-cov>=7.0.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version = "0.4.0"
update_changelog_on_bump = true
major_version_zero = true
